--- a/app/templates/error_log.html
+++ b/app/templates/error_log.html
@@ -4,7 +4,7 @@
 	<div class="full-width">
 		<h2>{{ title }}</h2>
 		
-		<table>
+		<table class="error-log">
 			<thead>
 				<tr>
 					<th>Date</th>
