--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% from 'macros.html' import render_field %}
+{% from 'macros.j2' import render_field %}
 
 {% block content %}
 	<div class="full-width">
