--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,15 +27,18 @@
 			
 			document.addEventListener("DOMContentLoaded", (event) => {
 				// Hide message on click
-				document.querySelectorAll(".message").forEach(function(element) {
-					element.querySelector(".controls button").addEventListener("click", () => {
+				document.querySelectorAll(".flash").forEach(function(element) {
+					element.querySelector(".close")[0]
+						   .addEventListener("click", () => {
 						element.classList.add("hidden");
 					});
 				});
 				
 				// Show/hide menu on small screens
-				document.querySelector(".toggle-menu button").addEventListener("click", (element) => {
-					document.querySelector("header .navigation").classList.toggle("toggled");
+				document.querySelector(".toggle-menu button")
+						.addEventListener("click", (element) => {
+					document.querySelector("header .navigation")
+							.classList.toggle("toggled");
 				});
 			});
 			
@@ -155,7 +158,7 @@
 			
 			
 			// Load an API endpoint and return the json response
-			// loadJSON("playlist", 1) => api_url/playlist/1
+			// loadJSON("playlist", 1) fetches api_url/playlist/1
 			async function loadJSON(...params) {
 				const endpoint = params.join("/");
 				const response = await fetch(baseUrl + "api/" + endpoint, {
@@ -286,7 +289,7 @@
 			{% with messages = get_flashed_messages(with_categories = true) %}
 				{% if messages %}
 					{% for category, message in messages %}
-						<div class="message {{ category }}">
+						<div class="flash {{ category }}">
 							<div class="level">{{ render_sprite(category) }}</div>
 							<div class="content">{{ message }}</div>
 							<button class="close" aria-label="Dismiss">
