--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,7 +48,7 @@
 			   message: Notification text
 			   id: Notification element ID to update (if exists) or set
 			   disappear = true: Fade out and remove after 5 seconds
-			   level: "info", "warn", "false" icon
+			   level: "info", "warn", "error" icon
 			   progress: [folder, of-folders, file, of-files]
 			   actionText: Action button label
 			   action, [args]: Run function(args) when button is clicked
@@ -99,8 +99,10 @@
 				if (progress != null) {
 					let progressTemplate = template.progress.content
 						.cloneNode(true);
-					console.log(progress, progressTemplate, progressTemplate.querySelectorAll("span"));
-					progressTemplate.querySelectorAll("span").forEach((element, index) => {
+					console.log(progress, progressTemplate,
+								progressTemplate.querySelectorAll("span"));
+					progressTemplate.querySelectorAll("span").forEach(
+						(element, index) => {
 						console.log(element, index);
 						// Add array contents to folder, of-folders, file, of-files
 						element.textContent = progress[index];
@@ -133,7 +135,7 @@
 							notifications.removeChild(element);
 						}, delay.notificationAnim);
 					}, delayFor);
-				};
+				}
 				
 				// Close button
 				notification.querySelector(".close")
@@ -154,7 +156,7 @@
 					// Fade and remove after delay
 					closeNotification(notification, true);
 				}
-			};
+			}
 			
 			
 			// Load an API endpoint and return the json response
@@ -176,7 +178,7 @@
 				} else {
 					return json;
 				}
-			};
+			}
 			
 			
 			let timer;
@@ -191,32 +193,33 @@
 				clearTimeout(timer);
 				clearTimeout(lazyTimer);
 				updateStatus();
-			};
+			}
 			
 			// Regularly check task status until complete
 			async function updateStatus() {
 				let response = await loadJSON("status");
 				let task = response.data;
 				console.log(task);
-				if (task.status == 1) {
+				if (task.status === 1) {
 					// Task running
 					let progress = [task.folder, task.of_folders,
 									task.file, task.of_files];
 					addMessage(task.message, "status", false, "info", progress);
 					// Queue next update
 					timer = setTimeout(updateStatus, delay.refreshStatus);
-				} else if (task.status == 0) {
+				} else if (task.status === 0) {
 					// Task complete/none running
 					// Generic message if blank
 					task.message = (task.message === null
 								   ? "Database update complete" : task.message);
 					// Offer playlist refresh if on video page
-					const action = (typeof(loadFolders) === "function" ? loadFolders : null);
+					const action = (typeof(loadFolders) === "function"
+								 ? loadFolders : null);
 					addMessage(task.message, "status", false, "info", null,
 							   "Refresh playlists", action);
 					// Return to lazily checking status
 					lazyTimer = setTimeout(lazyUpdateStatus, delay.checkStatus);
-				} else if (task.status == -1) {
+				} else if (task.status === -1) {
 					// Task error
 					addMessage(task.message, "status", false, "error");
 					// Return to lazily checking status
@@ -229,7 +232,7 @@
 					// Queue next update anyway
 					timer = setTimeout(updateStatus, delay.checkStatus);
 				}
-			};
+			}
 			
 			// Quietly and occasionally check whether a task is running
 			async function lazyUpdateStatus() {
@@ -241,15 +244,17 @@
 					updateStatus();
 				} else {
 					// No task running
-					if (response.refresh_due && typeof apiAvailable !== "undefined" && apiAvailable) {
+					if (response.refresh_due &&
+						typeof apiAvailable !== "undefined" && apiAvailable) {
 						// Database refresh due, video page loaded and logged in
 						refreshDatabase();
 					} else {
 						// Queue next update
-						lazyTimer = setTimeout(lazyUpdateStatus, delay.checkStatus);
+						lazyTimer = setTimeout(lazyUpdateStatus,
+											   delay.checkStatus);
 					}
 				}
-			};
+			}
 		</script>
 	</head>
 	
